# autofocus-rnn

./: LICENSE  README-CN.md  README.md  config.py  evaluate.py  focus_measures_norm.py  save_utils.py  show_log.py  split_images.py  train.py
cnn/: evaluate.py  train.py
dataset/: dataset_utils.py  focus_measure_types.py  group_utils.py  load_data_queue.py  microscope_utils.py
dataset/data_json/: 1.json  10.json  100.json  101.json  102.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  (+82 more)
dataset/tools/: calc_focus_measures.py  focus_measure_types.py  group_utils.py  interface.py  load_group_to_json.py
dataset/tools/focus_measures/: CMakeLists.txt  main.cpp
network/: model_rnn1.py  resnet.py
